--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,2 +1,106 @@
 @page "/"
-<p>aaa</p>
+<div class="tile is-parent">
+    <article class="message">
+        <div class="message-body">
+            <p class="title is-5">能魔大戦</p>
+            <p class="subtitle is-6">作者：星のおかゆ／作品情報／Nコード：N3795JJ</p>
+            能力と魔法が入り交じり混沌とした世界。 これは辺境の村に無限にも等しい魔力を持ち産まれたレイシが様々な苦難を仲間と共に乗り越え、成長し、お姫様を救う超王道ストーリーである。 笑いあり、涙あり、ちょいエロあり、チートあり、能力あり、魔法あり、友情、努力、勝利ありの小説です。
+            ジャンル：ハイファンタジー〔ファンタジー〕
+            キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
+            最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
+            週別ユニークユーザ： 242人　　レビュー数： 0件
+            総合ポイント： 16 pt
+            ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
+        </div>
+    </article>
+</div>
+<div class="tile is-parent">
+    <article class="message">
+        <div class="message-body">
+            <p class="title is-5">能魔大戦</p>
+            <p class="subtitle is-6">作者：星のおかゆ／作品情報／Nコード：N3795JJ</p>
+            能力と魔法が入り交じり混沌とした世界。 これは辺境の村に無限にも等しい魔力を持ち産まれたレイシが様々な苦難を仲間と共に乗り越え、成長し、お姫様を救う超王道ストーリーである。 笑いあり、涙あり、ちょいエロあり、チートあり、能力あり、魔法あり、友情、努力、勝利ありの小説です。
+            ジャンル：ハイファンタジー〔ファンタジー〕
+            キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
+            最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
+            週別ユニークユーザ： 242人　　レビュー数： 0件
+            総合ポイント： 16 pt
+            ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
+        </div>
+    </article>
+</div>
+<div class="tile is-parent">
+    <article class="message">
+        <div class="message-body">
+            <p class="title is-5">能魔大戦</p>
+            <p class="subtitle is-6">作者：星のおかゆ／作品情報／Nコード：N3795JJ</p>
+            能力と魔法が入り交じり混沌とした世界。 これは辺境の村に無限にも等しい魔力を持ち産まれたレイシが様々な苦難を仲間と共に乗り越え、成長し、お姫様を救う超王道ストーリーである。 笑いあり、涙あり、ちょいエロあり、チートあり、能力あり、魔法あり、友情、努力、勝利ありの小説です。
+            ジャンル：ハイファンタジー〔ファンタジー〕
+            キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
+            最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
+            週別ユニークユーザ： 242人　　レビュー数： 0件
+            総合ポイント： 16 pt
+            ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
+        </div>
+    </article>
+</div>
+<div class="tile is-parent">
+    <article class="message">
+        <div class="message-body">
+            <p class="title is-5">能魔大戦</p>
+            <p class="subtitle is-6">作者：星のおかゆ／作品情報／Nコード：N3795JJ</p>
+            能力と魔法が入り交じり混沌とした世界。 これは辺境の村に無限にも等しい魔力を持ち産まれたレイシが様々な苦難を仲間と共に乗り越え、成長し、お姫様を救う超王道ストーリーである。 笑いあり、涙あり、ちょいエロあり、チートあり、能力あり、魔法あり、友情、努力、勝利ありの小説です。
+            ジャンル：ハイファンタジー〔ファンタジー〕
+            キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
+            最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
+            週別ユニークユーザ： 242人　　レビュー数： 0件
+            総合ポイント： 16 pt
+            ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
+        </div>
+    </article>
+</div>
+<div class="tile is-parent">
+    <article class="message">
+        <div class="message-body">
+            <p class="title is-5">能魔大戦</p>
+            <p class="subtitle is-6">作者：星のおかゆ／作品情報／Nコード：N3795JJ</p>
+            能力と魔法が入り交じり混沌とした世界。 これは辺境の村に無限にも等しい魔力を持ち産まれたレイシが様々な苦難を仲間と共に乗り越え、成長し、お姫様を救う超王道ストーリーである。 笑いあり、涙あり、ちょいエロあり、チートあり、能力あり、魔法あり、友情、努力、勝利ありの小説です。
+            ジャンル：ハイファンタジー〔ファンタジー〕
+            キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
+            最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
+            週別ユニークユーザ： 242人　　レビュー数： 0件
+            総合ポイント： 16 pt
+            ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
+        </div>
+    </article>
+</div>
+<div class="tile is-parent">
+    <article class="message">
+        <div class="message-body">
+            <p class="title is-5">能魔大戦</p>
+            <p class="subtitle is-6">作者：星のおかゆ／作品情報／Nコード：N3795JJ</p>
+            能力と魔法が入り交じり混沌とした世界。 これは辺境の村に無限にも等しい魔力を持ち産まれたレイシが様々な苦難を仲間と共に乗り越え、成長し、お姫様を救う超王道ストーリーである。 笑いあり、涙あり、ちょいエロあり、チートあり、能力あり、魔法あり、友情、努力、勝利ありの小説です。
+            ジャンル：ハイファンタジー〔ファンタジー〕
+            キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
+            最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
+            週別ユニークユーザ： 242人　　レビュー数： 0件
+            総合ポイント： 16 pt
+            ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
+        </div>
+    </article>
+</div>
+<div class="tile is-parent">
+    <article class="message">
+        <div class="message-body">
+            <p class="title is-5">能魔大戦</p>
+            <p class="subtitle is-6">作者：星のおかゆ／作品情報／Nコード：N3795JJ</p>
+            能力と魔法が入り交じり混沌とした世界。 これは辺境の村に無限にも等しい魔力を持ち産まれたレイシが様々な苦難を仲間と共に乗り越え、成長し、お姫様を救う超王道ストーリーである。 笑いあり、涙あり、ちょいエロあり、チートあり、能力あり、魔法あり、友情、努力、勝利ありの小説です。
+            ジャンル：ハイファンタジー〔ファンタジー〕
+            キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
+            最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
+            週別ユニークユーザ： 242人　　レビュー数： 0件
+            総合ポイント： 16 pt
+            ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
+        </div>
+    </article>
+</div>
