--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,23 +1,29 @@
 ﻿@inherits LayoutComponentBase
+<div class="container">
+    <header class="header">
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <h1 class="title is-2">Narou App</h1>
+            </div>
+        </nav>
+    </header>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
+    <div class="page">
+        <div class="columns">
+            <div class="column is-3">
+                <NavMenu/>
+            </div>
+            <div class="column is-9">
+                <div class="">
+                        @Body
+                </div>
+            </div>
+        </div>
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
+    <div id="blazor-error-ui">
+        An unhandled error has occurred.
+        <a href="" class="reload">Reload</a>
+        <a class="dismiss">🗙</a>
+    </div>
 </div>
