--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,12 +1,18 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">NarouApp</a>
-    </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-    </nav>
-</div>
+﻿<aside class="menu">
+    <p class="menu-label">作品</p>
+    <ul class="menu-list">
+        <li><a>保存した作品</a></li>
+        <li><a>試し読みした作品</a></li>
+    </ul>
+    <p class="menu-label">作品を検索</p>
+    <ul class="menu-list">
+        <li><a>作品検索</a></li>
+        <li><a>ランキング</a></li>
+    </ul>
+    <p class="menu-label">他サイト</p>
+    <ul class="menu-list">
+        <li><a>Payments</a></li>
+        <li><a>Transfers</a></li>
+        <li><a>Balance</a></li>
+    </ul>
+</aside>
