#9 日間ランキングページ作成

--- a/Frontend/Components/Pages/Home.razor
+++ b/Frontend/Components/Pages/Home.razor
@@ -1,5 +1,6 @@
 @page "/"
 <div class="tile is-parent">
+    <p>aaa</p>
     <article class="message">
         <div class="message-body">
             <p class="title is-5">能魔大戦</p>
@@ -8,7 +9,7 @@
             ジャンル：ハイファンタジー〔ファンタジー〕
             キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
             最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
-            週別ユニークユーザ： 242人　　レビュー数： 0件
+            週別ユニークユーザ： 242人 レビュー数： 0件
             総合ポイント： 16 pt
             ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
         </div>
@@ -23,7 +24,7 @@
             ジャンル：ハイファンタジー〔ファンタジー〕
             キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
             最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
-            週別ユニークユーザ： 242人　　レビュー数： 0件
+            週別ユニークユーザ： 242人 レビュー数： 0件
             総合ポイント： 16 pt
             ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
         </div>
@@ -38,7 +39,7 @@
             ジャンル：ハイファンタジー〔ファンタジー〕
             キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
             最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
-            週別ユニークユーザ： 242人　　レビュー数： 0件
+            週別ユニークユーザ： 242人 レビュー数： 0件
             総合ポイント： 16 pt
             ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
         </div>
@@ -53,7 +54,7 @@
             ジャンル：ハイファンタジー〔ファンタジー〕
             キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
             最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
-            週別ユニークユーザ： 242人　　レビュー数： 0件
+            週別ユニークユーザ： 242人 レビュー数： 0件
             総合ポイント： 16 pt
             ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
         </div>
@@ -68,7 +69,7 @@
             ジャンル：ハイファンタジー〔ファンタジー〕
             キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
             最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
-            週別ユニークユーザ： 242人　　レビュー数： 0件
+            週別ユニークユーザ： 242人 レビュー数： 0件
             総合ポイント： 16 pt
             ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
         </div>
@@ -83,7 +84,7 @@
             ジャンル：ハイファンタジー〔ファンタジー〕
             キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
             最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
-            週別ユニークユーザ： 242人　　レビュー数： 0件
+            週別ユニークユーザ： 242人 レビュー数： 0件
             総合ポイント： 16 pt
             ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
         </div>
@@ -98,7 +99,7 @@
             ジャンル：ハイファンタジー〔ファンタジー〕
             キーワード： 123大賞5 男主人公 魔王 勇者 魔法 冒険 超能力 ダンジョン 異能力バトル ネトコン12 ESN大賞7 ドリコム大賞3 異世界 友情努力勝利 ギャグ R15 残酷な描写あり
             最終更新日：2024/08/26 21:43　読了時間：約295分（147,093文字）
-            週別ユニークユーザ： 242人　　レビュー数： 0件
+            週別ユニークユーザ： 242人 レビュー数： 0件
             総合ポイント： 16 pt
             ブックマーク： 0件 評価人数： 2 人 評価ポイント： 16 pt
         </div>
