--- a/Frontend/Components/_Imports.razor
+++ b/Frontend/Components/_Imports.razor
@@ -6,6 +6,5 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using NarouApp
-@using NarouApp.Components
+@using NarouApp.Frontend
 @using Blazorise
