#10 週間ランキングページ作成

--- a/Frontend/Components/Pages/DailyRanking.razor
+++ b/Frontend/Components/Pages/DailyRanking.razor
@@ -1,4 +1,4 @@
 @page "/ranking/daily"
-@using NarouApp.Frontend.Components.CustomComponent.Ranking.Application
+@using NarouApp.Frontend.Components.CustomComponent.Ranking.Application.Daily
 <h3>DailyRanking</h3>
-<RankingComponent/>
+<DailyRankingComponent/>
