#16 四半期ランキングページ作成

--- a/Frontend/Components/Layout/SearchMenu.razor
+++ b/Frontend/Components/Layout/SearchMenu.razor
@@ -14,7 +14,7 @@
     </NavLink>
 </li>
 <li>
-    <NavLink class="nav-link" href="ranking/yearly">
-        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> 年間ランキング
+    <NavLink class="nav-link" href="ranking/quarterly">
+        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> 四半期ランキング
     </NavLink>
 </li>
