--- a/Frontend/Components/Pages/DailyRanking.razor
+++ b/Frontend/Components/Pages/DailyRanking.razor
@@ -1,4 +1,4 @@
 @page "/ranking/daily"
-@using NarouApp.Frontend.Components.CustomComponent.Ranking.Application.Daily
+@using NarouApp.Frontend.Components.CustomComponent.Ranking.Presentation.Daily
 <h3>DailyRanking</h3>
 <DailyRankingComponent/>
