--- a/Frontend/Components/Pages/QuarterlyRanking.razor
+++ b/Frontend/Components/Pages/QuarterlyRanking.razor
@@ -1,4 +1,4 @@
 @page "/ranking/quarterly"
-@using NarouApp.Frontend.Components.CustomComponent.Ranking.Application.Quarterly
+@using NarouApp.Frontend.Components.CustomComponent.Ranking.Presentation.Quarterly
 <h3>quarterlyRanking</h3>
 <QuarterlyRankingComponent/>
