--- a/Frontend/Components/Pages/WeeklyRanking.razor
+++ b/Frontend/Components/Pages/WeeklyRanking.razor
@@ -1,4 +1,4 @@
 @page "/ranking/weekly"
-@using NarouApp.Frontend.Components.CustomComponent.Ranking.Application.Weekly
+@using NarouApp.Frontend.Components.CustomComponent.Ranking.Presentation.Weekly
 <h3>weeklyRanking</h3>
 <WeeklyRankingComponent/>
