--- a/Frontend/Components/Pages/MonthlyRanking.razor
+++ b/Frontend/Components/Pages/MonthlyRanking.razor
@@ -1,4 +1,4 @@
 @page "/ranking/monthly"
-@using NarouApp.Frontend.Components.CustomComponent.Ranking.Application.Monthly
+@using NarouApp.Frontend.Components.CustomComponent.Ranking.Presentation.Monthly
 <h3>monthlyRanking</h3>
 <MonthlyRankingComponent/>
