#53 閲覧履歴機能

--- a/NarouApp/Frontend/Components/CustomComponent/Ranking/Presentation/Daily/DailyRankingComponentTests.razor
+++ b/NarouApp/Frontend/Components/CustomComponent/Ranking/Presentation/Daily/DailyRankingComponentTests.razor
@@ -1,3 +1,4 @@
+@using Blazored.LocalStorage
 @using Bunit
 @using Moq
 @using NarouApp.Frontend.Components.CustomComponent.Ranking.Application
@@ -10,16 +11,21 @@
     [Fact] public void ShouldRenderDailyRankingComponentResultNotEmpty() {
         var mockUseCase = new Mock<IBaseUseCase<RankingInput, List<RankingOutPut>>>();
         Services.AddKeyedSingleton(nameof(DailyRankingUseCase), mockUseCase.Object);
+        Services.AddBlazoredLocalStorage();
         mockUseCase.Setup(static useCase => useCase.Invoke(It.IsAny<RankingInput>())).Returns(Task.FromResult<List<RankingOutPut>>([new RankingOutPut("Ncode", 1, 1)]));
         var cut = Render(@<DailyRankingComponent/>);
         cut.Find("ul").MarkupMatches(@<ul>
-            <li>Ncode</li><li>1</li><li>1</li>
+            <span>
+                <li>Ncode</li><li>1</li><li>1</li>
+            </span>
         </ul>);
     }
 
     [Fact] public void ShouldRenderDailyRankingComponentResultEmpty() {
         var mockUseCase = new Mock<IBaseUseCase<RankingInput, List<RankingOutPut>>>();
         Services.AddKeyedSingleton(nameof(DailyRankingUseCase), mockUseCase.Object);
+        Services.AddBlazoredLocalStorage();
+
         mockUseCase.Setup(static useCase => useCase.Invoke(It.IsAny<RankingInput>())).Returns(Task.FromResult<List<RankingOutPut>>([]));
         var cut = Render(@<DailyRankingComponent/>);
         cut.Find("ul").MarkupMatches(@<ul></ul>);
