--- a/NarouApp/Frontend/Components/CustomComponent/Ranking/Presentation/RankingComponent.razor
+++ b/NarouApp/Frontend/Components/CustomComponent/Ranking/Presentation/RankingComponent.razor
@@ -1,10 +1,17 @@
 @rendermode InteractiveServer
 <ul>
     @foreach (var ranking in ResultData){
-        <span @onclick="@(() => Click(ranking.Ncode))">
-            <li>@ranking.Ncode</li>
-            <li>@ranking.Pt</li>
-            <li>@ranking.rank</li>
-        </span>
+        <article class="message" @onclick="@(() => Click(ranking.Ncode))">
+            <div class="message-body">
+                <p class="title is-5">@ranking.Title</p>
+                <p class="subtitle is-6">作者：@ranking.Writer／作品情報／Nコード：@ranking.Ncode</p>
+                <p> @ranking.Story</p>
+                <p>キーワード： @ranking.KeyWord</p>
+                日間ポイント： @ranking.DailyPoint pt
+                週間ポイント： @ranking.WeeklyPoint pt
+                月間ポイント： @ranking.MonthlyPoint pt
+                四半期ポイント： @ranking.QuarterlyPoint pt
+            </div>
+        </article>
     }
 </ul>
