--- a/NarouApp/Frontend/Components/CustomComponent/Ranking/Presentation/Weekly/WeeklyRankingComponentTests.razor
+++ b/NarouApp/Frontend/Components/CustomComponent/Ranking/Presentation/Weekly/WeeklyRankingComponentTests.razor
@@ -4,25 +4,88 @@
 @using NarouApp.Frontend.Components.CustomComponent.Ranking.Application
 @using NarouApp.Frontend.Components.CustomComponent.Ranking.Application.Weekly
 @using NarouApp.Frontend.Components.CustomComponent.Util
+@using DateTime=NarouApp.Frontend.Components.CustomComponent.Util.DateTime
 @using Xunit
 @inherits Bunit.TestContext
 
 @code {
-    [Fact] public void ShouldRenderWeeklyRankingComponentResultNotEmpty() {
+    [Fact] public void ShouldRenderWeeklyRankingComponentResultNotEmptyDateTimeNow() {
+        var mockDateTime = new Mock<IDateTime>();
+        mockDateTime.Setup(mock => mock.GetDateTimeNow()).Returns(System.DateTime.Now);
         var mockUseCase = new Mock<IBaseUseCase<RankingInput, List<RankingOutPut>>>();
         Services.AddKeyedSingleton(nameof(WeeklyRankingUseCase), mockUseCase.Object);
+        Services.AddSingleton(mockDateTime.Object);
         Services.AddBlazoredLocalStorage();
-        mockUseCase.Setup(static useCase => useCase.Invoke(It.IsAny<RankingInput>())).Returns(Task.FromResult<List<RankingOutPut>>([new RankingOutPut("Ncode", 1, 1)]));
+        mockUseCase.Setup(static useCase => useCase.Invoke(It.IsAny<RankingInput>())).Returns(Task.FromResult<List<RankingOutPut>>([
+            new RankingOutPut(2000,
+            5000,
+            7000,
+            9000,
+            1,
+            "N8692BO",
+            "title",
+            1,
+            "Writer",
+            "Story",
+            "KeyWord")
+        ]));
         var cut = Render(@<WeeklyRankingComponent/>);
         cut.Find("ul").MarkupMatches(@<ul>
-            <span>
-                <li>Ncode</li><li>1</li><li>1</li>
-            </span>
+            <article class="message">
+                <div class="message-body">
+                    <p class="title is-5">title</p>
+                    <p class="subtitle is-6">作者：Writer／作品情報／Nコード：N8692BO</p>
+                    <p>Story</p>
+                    <p>キーワード： KeyWord</p>
+                    日間ポイント： 2000 pt
+                    週間ポイント： 5000 pt
+                    月間ポイント： 7000 pt
+                    四半期ポイント： 9000 pt
+                </div>
+            </article>
+        </ul>);
+    }
+
+    [Fact] public void ShouldRenderWeeklyRankingComponentResultNotEmptyDateTimeThuseDay() {
+        var mockDateTime = new Mock<IDateTime>();
+        mockDateTime.Setup(mock => mock.GetDateTimeNow()).Returns(System.DateTime.Parse("2024/09/24"));
+        var mockUseCase = new Mock<IBaseUseCase<RankingInput, List<RankingOutPut>>>();
+        Services.AddKeyedSingleton(nameof(WeeklyRankingUseCase), mockUseCase.Object);
+        Services.AddSingleton(mockDateTime.Object);
+        Services.AddBlazoredLocalStorage();
+        mockUseCase.Setup(static useCase => useCase.Invoke(It.IsAny<RankingInput>())).Returns(Task.FromResult<List<RankingOutPut>>([
+            new RankingOutPut(2000,
+            5000,
+            7000,
+            9000,
+            1,
+            "N8692BO",
+            "title",
+            1,
+            "Writer",
+            "Story",
+            "KeyWord")
+        ]));
+        var cut = Render(@<WeeklyRankingComponent/>);
+        cut.Find("ul").MarkupMatches(@<ul>
+            <article class="message">
+                <div class="message-body">
+                    <p class="title is-5">title</p>
+                    <p class="subtitle is-6">作者：Writer／作品情報／Nコード：N8692BO</p>
+                    <p>Story</p>
+                    <p>キーワード： KeyWord</p>
+                    日間ポイント： 2000 pt
+                    週間ポイント： 5000 pt
+                    月間ポイント： 7000 pt
+                    四半期ポイント： 9000 pt
+                </div>
+            </article>
         </ul>);
     }
 
     [Fact] public void ShouldRenderWeeklyRankingComponentResultEmpty() {
         var mockUseCase = new Mock<IBaseUseCase<RankingInput, List<RankingOutPut>>>();
+        Services.AddSingleton<IDateTime, DateTime>();
         Services.AddKeyedSingleton(nameof(WeeklyRankingUseCase), mockUseCase.Object);
         Services.AddBlazoredLocalStorage();
         mockUseCase.Setup(static useCase => useCase.Invoke(It.IsAny<RankingInput>())).Returns(Task.FromResult<List<RankingOutPut>>([]));
